@@ -4,6 +4,7 @@ package com.cagneymoreau.fitlog.logic;
 import android.app.Activity;
 import android.util.Pair;
 
+import androidx.fragment.app.Fragment;
 import androidx.room.Room;
 
 import com.cagneymoreau.fitlog.data.AppDataBase;
@@ -16,7 +17,11 @@ import com.cagneymoreau.fitlog.data.UserProfileDao;
 import com.cagneymoreau.fitlog.data.WorkoutRecord;
 import com.cagneymoreau.fitlog.data.WorkoutRecordDao;
 import com.cagneymoreau.fitlog.views.MyFragment;
+import com.cagneymoreau.fitlog.views.Workout_Holder_Fragment;
+import com.cagneymoreau.fitlog.views.history_viewer.History_Chooser;
 import com.cagneymoreau.fitlog.views.history_viewer.recycleview.HistoryItem;
+import com.google.firebase.crashlytics.FirebaseCrashlytics;
+import com.google.firebase.crashlytics.internal.model.CrashlyticsReport;
 
 import java.time.Instant;
 import java.time.LocalDate;
@@ -24,19 +29,28 @@ import java.time.LocalDateTime;
 import java.time.ZoneId;
 import java.util.ArrayList;
 import java.util.Collections;
+import java.util.LinkedHashSet;
 import java.util.List;
+import java.util.Set;
+import java.util.TreeSet;
 
 import kotlin.Triple;
 
 /**
+ *
  * Fetch and organize data from storage
  *
  * None of these methods are available on UI thread
  *
- * // TODO: 5/27/2021 should the UIfrag or the cotroller hold the editable
- *  // TODO: 5/27/2021 if sort is called while editing it would start editing wrong area
+ *     // TODO: 11/2/2021 are we working with database or lists held in controller class for all these
+ *     // TODO: 11/2/2021 are we managing lists with title which could have duplicates? or with objects and uid
  *
- *  // TODO: 6/8/2021 delete old workout data if near max capacity
+ *
+ *      // TODO: 5/27/2021 if sort is called while editing it would start editing wrong area
+ *
+ *
+ *
+
  *
  */
 
@@ -50,10 +64,13 @@ public class Controller {
   SplitsDao splitsDao;
   WorkoutRecordDao workoutRecordDao;
 
+  Subscription subscription;
+
+
   private final int maxCheckLists = 25;
 
   //how many months of records to save
-  private final int maxRecordPeriods = 16;
+  private final int maxRecordPeriods = 12;
 
     boolean fullyLoaded;
 
@@ -70,6 +87,8 @@ public class Controller {
             gatherCheckLists();
             gatherSplits();
 
+            subscription = new Subscription(activity);
+
     }
 
 
@@ -77,10 +96,10 @@ public class Controller {
 
 
 
- //region----------------------------------------  app settings/display
+    //region----------------------------------------  user /app settings
     
     //app internal
-    private boolean firstLaunch;
+    private boolean firstLaunch = true;
     
     //user info display
     private String username = "";
@@ -93,45 +112,78 @@ public class Controller {
 
     List<UserProfile> user;
 
+    Set<String> movements;
+
+    //called from non ui thread
     private void getAppDisp()
     {
         user = userProfileDao.getAll();
         if (user.size() == 0){
             user.add(new UserProfile());
             user.get(0).uid = 0;
+            user.get(0). backups = new ArrayList<>();
+            user.get(0).timers = new ArrayList<>();
+            user.get(0).movements = new ArrayList<>();
+            movements = new TreeSet<>();
             userProfileDao.insert(user.get(0));
+
         }
         else {
+            firstLaunch = false;
             username = user.get(0).userName;
             email = user.get(0).email;
             checklist = user.get(0).checkList;
             statistics = user.get(0).statistics;
             bodyMeasure = user.get(0).bodyMeasure;
+            movements = new TreeSet<>(user.get(0).movements);
+
+            if (email == null){
+                email = "";
+            }
+            FirebaseCrashlytics.getInstance().setCustomKey("email", email);
         }
 
     }
 
 
-    public void saveUserInfoDataBase()
+    public void saveUserToDB()
     {
+        user.get(0).userName = username;
+        user.get(0).email = email;
+        user.get(0).firstLaunch = firstLaunch;
+        user.get(0).bodyMeasure = bodyMeasure;
+        user.get(0).checkList = checklist;
+        user.get(0).statistics = statistics;
+        user.get(0).movements =  new ArrayList<>(movements);
+
+
         new Thread(() -> {
-
-
-            user.get(0).userName = username;
-            user.get(0).email = email;
-            user.get(0).firstLaunch = firstLaunch;
-            user.get(0).bodyMeasure = bodyMeasure;
-            user.get(0).checkList = checklist;
-            user.get(0).statistics = statistics;
 
             userProfileDao.update(user.get(0));
 
         }).start();
-
     }
 
 
+
+
+
     //getters
+    public Set<String> getMovements()
+    {
+
+        if (movements == null){
+            movements = new TreeSet<>();
+        }
+
+        return movements;
+    }
+
+    public void addMovement(String m)
+    {
+        movements.add(m);
+    }
+
     public boolean getcheckListBool()
     {
         return checklist;
@@ -189,6 +241,8 @@ public class Controller {
     }
 
 
+    //region-----------------trophy
+
     //when some new task is accomplished add a trophy
     //check if exists first
     public void addTrophy(int trophy)
@@ -210,8 +264,33 @@ public class Controller {
         return new ArrayList<>(user.get(0).trophies);
     }
 
+
+    //endregion
+
+    //region---------------------------------------------------------------------------------------------timers
+    /**
+     * timers consist of a delay and count to construct interval alert for workout timing and tempo
+     * Pair<delay, count>
+     * All data stored in heap as user. relay on user table being saved elsewhere
+     */
+
+    public void addTimer(int delay, int count)
+    {
+        user.get(0).timers.add(new Pair<>(delay, count));
+    }
+
+    public void deleteTimer(int position)
+    {
+        user.get(0).timers.remove(position);
+
+    }
+
     public ArrayList<Pair<Integer, Integer>> getTimers()
     {
+        if (user.get(0).timers == null){
+            user.get(0).timers = new ArrayList<>();
+        }
+
         return new ArrayList<>(user.get(0).timers);
     }
 
@@ -220,22 +299,31 @@ public class Controller {
         user.get(0).timers = new ArrayList<>(tList);
     }
 
-    //backups
+    //endregion
 
-    //every time a new workout is created we see if it falls into an existing month or new month
-    //triple<start, end, been emailed>
+    //region----------------------------------backups
+
+    /**
+     * Backups represent periods of time and a boolean flag signifying whether the data within has been backed up
+     * time objects cant be used due to sql restriction?
+     * this method needs to make sure there is a "backup" associated with that entry
+     * if not create that "backup"
+     * flag an existing true as false if being edited // TODO: 10/25/2021
+     *
+     * @param millis
+     */
+
     public void placeWorkoutIntoBackups(Long millis)
     {
-        //user.get(0).backups.add(bu);
+        //user.get(0).backups.clear(); //debuggin only
 
+        // TODO: 11/3/2021 make this go back several months in case user want to back enter some data
         //first time user is using app, backdate it 60 seconds and create a new records
-        if (user.get(0).backups == null || user.get(0).backups.size() == 0) {
+        if (user.get(0).backups.size() == 0) {
 
-            user.get(0). backups = new ArrayList<>();
+            long backlog = millis - (1000L*60L*60L*24L*90L); //last num is 60 days
+            user.get(0).backups.add(generateNewMonth(backlog));
 
-            user.get(0).backups.add(generateNewMonth(System.currentTimeMillis() - (1000 * 60)));
-
-            return;
         }
 
         //we already have data. see if it fits into existing or create new month brackets until it does
@@ -243,28 +331,51 @@ public class Controller {
 
         while (millis > mostRecent.getSecond()){
 
-            user.get(0).backups.add(generateNewMonth(mostRecent.getSecond()));
+            user.get(0).backups.add(0, generateNewMonth(mostRecent.getSecond()));
             mostRecent = user.get(0).backups.get(0);
 
         }
 
-        user.get(0).backups.subList(0, maxRecordPeriods).clear();
+        while (user.get(0).backups.size() > maxRecordPeriods){
+
+            Triple<Long,Long,Boolean> trip = user.get(0).backups.get(user.get(0).backups.size()-1);
+            user.get(0).backups.remove(user.get(0).backups.size()-1);
+
+            ArrayList<WorkoutRecord> list = getMatchingWorkoutRecords(trip.getFirst(), trip.getSecond());
+
+            new Thread(() -> {
+
+                for (int i = 0; i < list.size(); i++) {
+
+                    workoutRecordDao.delete(list.get(i).uid);
+
+                }
+
+            }).start();
+
+
+        }
+
+
+
+
+
 
     }
 
-    //create a new period from the incoming millis + 1 to the end of the next
+    //create a new period from the incoming millis + 60001 minute to the end of the next
     //month (begin looking for next month 36 hours after start to avoid single day months
     //due to a time zone change
     private Triple<Long, Long, Boolean> generateNewMonth(Long prevMonthEnd)
     {
 
-        LocalDate startSearch = Instant.ofEpochMilli(prevMonthEnd - (1000 * 60 *60*36)).atZone(ZoneId.systemDefault()).toLocalDate();
+        LocalDate startSearch = Instant.ofEpochMilli(prevMonthEnd + (1000 * 60 *60*36)).atZone(ZoneId.systemDefault()).toLocalDate();
         LocalDate lastDay = startSearch.withDayOfMonth(startSearch.lengthOfMonth());
         LocalDateTime end = LocalDateTime.of(lastDay.getYear(), lastDay.getMonth(), lastDay.getDayOfMonth(), 23, 59, 59);
 
         Long input = end.atZone(ZoneId.systemDefault()).toInstant().toEpochMilli();
 
-        Triple<Long, Long, Boolean> newMonth = new Triple<>(prevMonthEnd + 1, input,false);
+        Triple<Long, Long, Boolean> newMonth = new Triple<>(prevMonthEnd + 6001, input,false);
 
 
 
@@ -281,7 +392,12 @@ public class Controller {
 
 
     //endregion
-    
+
+
+
+    //endregion
+
+
     
     //region------------------------- checklist
 
@@ -290,19 +406,55 @@ public class Controller {
      * we can save progress
      */
 
-    List<CheckLists> checkListsList;
+    List<CheckLists> checkListsList; //new and updated
+    List<CheckLists> checkListsToDelete; //need to delete
 
     private int checkListToModify = -1;
 
-    //pull from database and sort in order of last used date
+    //pull from database and sort in order of last used date <- called from non ui thread
     private void gatherCheckLists()
     {
         checkListsList = checkListsDao.getAll();
+        checkListsToDelete = new ArrayList<>();
 
        // Collections.sort(checkListsList, (o1, o2) -> Long.compare(o2.lastUsedMilli,  o1.lastUsedMilli));
 
     }
 
+
+    // TODO: 11/4/2021 called when app is closed or checlist chooser exited
+    public void updateCheckListInDB()
+    {
+        new Thread(() -> {
+
+            for (int i = 0; i < checkListsList.size(); i++) {
+
+                 int result =  checkListsDao.update(checkListsList.get(i));
+
+                 if (result == 0){
+
+                     checkListsDao.insert(checkListsList.get(i));
+
+                 }
+
+            }
+
+
+            for (int i = 0; i < checkListsToDelete.size(); i++) {
+                checkListsDao.delete(checkListsToDelete.get(i));
+            }
+            checkListsToDelete.clear();
+
+        }).start();
+
+    }
+
+
+
+    /**
+     *
+     * @return titles with boolean
+     */
     //return a list for the UI to show user in order of last used date with an active checklist highlighted
     //if checklists length = 25 dont give the option to add any more
     public Pair<List<String>, Boolean> getCheckListsChoice()
@@ -352,35 +504,24 @@ public class Controller {
     //switch which checklist is active and disable others
     public Pair<List<String>, Boolean> selectCheckList(int position)
     {
-        // TODO: 5/21/2021 change date and reorder them
-
-        List<CheckLists> toUpdate = new ArrayList<>();
-
         if (position == 0){
             checkListsList.get(0).selected = ! checkListsList.get(0).selected;
             if (checkListsList.get(0).selected)checkListsList.get(0).lastUsedMilli = System.currentTimeMillis();
-            toUpdate.add(checkListsList.get(0));
         }
         else {
 
             checkListsList.get(0).selected = false;
             checkListsList.get(position).selected = true;
             checkListsList.get(position).lastUsedMilli = System.currentTimeMillis();
-
-            toUpdate.add(checkListsList.get(0));
-            toUpdate.add(checkListsList.get(position));
         }
-
-        updateCheckListInDB(toUpdate, false);
-
         return getCheckListsChoice();
-
     }
 
 
     //return checklist with title prepended
     public ArrayList<String> getSpecificCheckListEditable(int which)
     {
+        //create new
         if (which == checkListsList.size()){
           return null;
         }
@@ -443,51 +584,69 @@ public class Controller {
         checkListsList.get(position).lastUsedMilli = System.currentTimeMillis();
         checkListsList.get(position).checkList = update;
 
-
-
-        List<CheckLists> list = new ArrayList<>();
-        list.add(checkListsList.get(position));
-        updateCheckListInDB(list, newDBItem);
-
     }
 
 
 
-    private void updateCheckListInDB(List<CheckLists> checkLists, boolean insert)
+    public void deleteChecklist( CheckLists checkLists)
     {
-        new Thread(() -> {
+        checkListsToDelete.add(checkLists);
 
-            for (int i = 0; i < checkLists.size(); i++) {
-                if (insert){
-                    checkListsDao.insert(checkLists.get(i));
-                }else {
-                    checkListsDao.update(checkLists.get(i));
-                }
-            }
-
-        }).start();
-
+        checkListsList.remove(checkLists);
     }
 
 
-
+    public CheckLists getspecificCheckList(int pos)
+    {
+        return checkListsList.get(pos);
+    }
 
 
 
     //endregion
 
 
+
     //region------------------------- Splits
 
     List<Splits> splitsList;
+    List<Splits> splitsToDelete;
 
     private int splitToModify = -1;
 
+    //called from non ui thread
     private void gatherSplits()
     {
        splitsList = splitsDao.getAll();
+       splitsToDelete = new ArrayList<>();
 
     }
+
+    //called when exiting the split design menu
+    public void updateSplitsInDB()
+    {
+        new Thread(() -> {
+
+            for (int i = 0; i < splitsList.size(); i++) {
+
+                int result =  splitsDao.update(splitsList.get(i));
+
+                if (result == 0){
+
+                    splitsDao.insert(splitsList.get(i));
+                }
+            }
+
+            for (int i = 0; i < splitsToDelete.size(); i++) {
+                splitsDao.delete(splitsToDelete.get(i));
+            }
+            splitsToDelete.clear();
+
+        }).start();
+
+    }
+
+
 
     public List<String> getSplitsList()
     {
@@ -528,7 +687,6 @@ public class Controller {
     public List<String> selectSplit(int position)
     {
             splitsList.get(position).lastUsedMilli = System.currentTimeMillis();
-            updateSplitinDB(splitsList.get(position), false);
 
             return getSplitsList();
     }
@@ -606,7 +764,7 @@ public class Controller {
 
 
     /**
-     * Update the heap list and then update database asynchronously
+     * Update the heap list
      * @param update 1) is name title and each after is the specific days starting with title and following with movements
      * @param position which split are we updating
      */
@@ -647,29 +805,34 @@ public class Controller {
         if (update.size() > 9) splitsList.get(position).dayNine = update.get(9);
         if (update.size() > 10) splitsList.get(position).dayTen = update.get(10);
 
-       updateSplitinDB(splitsList.get(position), newDBItem);
+
 
     }
 
 
-
-    private void updateSplitinDB(Splits sp, boolean insert)
+    public Splits getSpecificSplit(int pos)
     {
+        return splitsList.get(pos);
+    }
 
-            new Thread(() -> {
+    public void deleteSplits(ArrayList<Splits> splitDel)
+    {
+        new Thread(() -> {
 
+            for (Splits s :
+                splitDel) {
+                splitsList.remove(s);
+                splitsDao.delete(s);
+        }
 
-                    if (insert){
-                        splitsDao.insert(sp);
-                    }else {
-                        splitsDao.update(sp);
-                    }
-
-            }).start();
+        }).start();
 
     }
+
+
 
     //endregion
+
 
     /**
      * The workoutRecord Object is the only active version
@@ -690,6 +853,11 @@ public class Controller {
     public String getCurrentSplitName()
     {
         return workoutRecord.splitName;
+    }
+
+    public int getCurrentUID()
+    {
+        return workoutRecord.uid;
     }
 
     public void getRecentWorkoutDesc(MyFragment myFragment)
@@ -724,12 +892,40 @@ public class Controller {
         }
 
         myFragment.getActivity().runOnUiThread(() -> {
+
             myFragment.sendSqlResults(desc);
+
         });
 
 
         }).start();
     }
+
+
+    public void activateWorkout(int uid, Workout_Holder_Fragment fragment)
+    {
+        new Thread(() -> {
+
+            //save existing
+            if (workoutRecord != null) {
+
+                int success = workoutRecordDao.update(workoutRecord);
+
+                if (success == 0) {
+                    workoutRecordDao.insert(workoutRecord);
+                }
+            }
+
+            workoutRecord = workoutRecordDao.getRecordbyUID(uid);
+
+            fragment.openHistory();
+
+        }).start();
+
+
+
+    }
+
 
 
     public WorkoutRecord openExistingWorkoutRecord(int uid)
@@ -763,41 +959,72 @@ public class Controller {
     }
 
     /**
-     * @return up to the last 30 chrono workouts
+     * @return return workout from periods, -1 means last 30 days without period consideration
      */
-    public ArrayList<HistoryItem> getRecentList()
+    public void getRecentList(History_Chooser chooser, int period)
     {
-        long start = System.currentTimeMillis();
-        long end = start - (1000L*60L*60L*24L*60L); //30 days
 
-        ArrayList<WorkoutRecord> records = (ArrayList<WorkoutRecord>) workoutRecordDao.getSelection(start, end);
 
-        ArrayList<HistoryItem> rList = new ArrayList<>();
+
+        new Thread(() -> {
+
+            long start = System.currentTimeMillis();
+            long end = start - (1000L*60L*60L*24L*60L); //last num is 60 days
+
+            if (period > -1){
+
+                Triple<Long, Long, Boolean> v = user.get(0).backups.get(period);
+
+                start = v.getSecond();
+                end = v.getFirst();
+
+            }
+
+
+            ArrayList<WorkoutRecord> records = (ArrayList<WorkoutRecord>) workoutRecordDao.getSelection(start, end);
+
+            Collections.sort(records, (o1, o2) -> Long.compare(o2.datetime,  o1.datetime));
+
+
+
+            ArrayList<HistoryItem> rList = new ArrayList<>();
 
         for (int i = 0; i < records.size(); i++) {
             HistoryItem h = new HistoryItem();
             h.uid = records.get(i).uid;
             h.dayName = records.get(i).dayName;
             h.splitName = records.get(i).splitName;
-            h.date = LocalDate.ofEpochDay(records.get(i).uid);
+            h.date = Instant.ofEpochMilli(records.get(i).datetime).atZone(ZoneId.systemDefault()).toLocalDate();
 
             rList.add(h);
         }
 
-        return rList;
+        chooser.setHistory(rList);
+
+        }).start();
     }
 
 
     /**
      * Dont save to database here in case user backs up from a mistake
+     * if time = -1 than its now
      */
-    public void createNewWorkoutRecord(int dayPos)
+    public void createNewWorkoutRecord(int dayPos, long time)
     {
+        // TODO: 10/26/2021 save an existing record that is open? if not null
+
         workoutRecord = new WorkoutRecord();
 
-        //workoutRecord.uid = workoutRecordDao.getLastEntry() + 1;
+        if (time == -1){
 
-        workoutRecord.datetime = System.currentTimeMillis();
+            workoutRecord.datetime = System.currentTimeMillis();
+
+        }else{
+
+            workoutRecord.datetime = time;
+
+        }
+
 
         workoutRecord.splitName = splitsList.get(0).splitName;
 
@@ -813,18 +1040,47 @@ public class Controller {
             workouts.add(n);
         }
 
+        //checklist
+        Pair<List<String>, Boolean> check = getCheckListsChoice();
+        ArrayList<Pair<String, Boolean>>  savable = new ArrayList<>();
+
+        if (check.second){
+
+            ArrayList<String> thisList = getSpecificCheckListEditable(0);
+
+            for (int i = 1; i < thisList.size(); i++) {
+
+                savable.add(new Pair<>(thisList.get(i), true)); // TODO: 10/22/2021 auto uncheck, checked, repeat
+
+            }
+
+        }else{
+
+            String s = "Checklist not enabled";
+            savable.add(new Pair<>(s, true)); // TODO: 10/22/2021 auto uncheck, checked, repeat
+
+        }
+
+        workoutRecord.checkList = savable;
+
         workoutRecord.workout = workouts;
 
-        // TODO: 6/7/2021 sql insert
+        
 
 
     }
 
 
     //checklist initial grab and update
+    // TODO: 10/22/2021 prepend with title
     public ArrayList<Pair<String, Boolean>> getCheckList()
     {
         return workoutRecord.checkList;
+    }
+
+    public void setCheckList(ArrayList<Pair<String, Boolean>> input)
+    {
+        workoutRecord.checkList = input;
     }
 
 
@@ -833,44 +1089,72 @@ public class Controller {
         return workoutRecord.notes;
     }
 
+    public void updateNotes(String note)
+    {
+        workoutRecord.notes = note;
+    }
 
-    public void updateCheckList(ArrayList<Pair<String, Boolean>> checkList, String notes)
+    public void updateCheckListInWorkout(ArrayList<Pair<String, Boolean>> checkList, String notes)
     {
         workoutRecord.checkList = checkList;
         workoutRecord.notes = notes;
 
-        // TODO: 6/3/2021 insert into sql
+
 
     }
 
+    //this is a convinience method used when creating new workouts
+    //all other records are opened by milli time from a history log
     public ArrayList<ArrayList<String>> getCurrentWorkout()
     {
         return new ArrayList<>(workoutRecord.workout);
     }
 
-    /**
-     * @param updates
-     */
+
+    //called to save all data when workoutholder is exited
+    public void saveWorkoutToDB()
+    {
+        new Thread(() -> {
+
+            int success =  workoutRecordDao.update(workoutRecord);
+
+            if (success == 0){
+                workoutRecordDao.insert(workoutRecord);
+                workoutRecord.uid = workoutRecordDao.getLastEntry();
+            }
+
+
+        }).start();
+
+    }
+
     public void updatecurrentWorkout(ArrayList<ArrayList<String>> updates)
     {
         workoutRecord.workout = updates;
-
-        // TODO: 6/3/2021 update sql
-
     }
 
 
 
 
-    // TODO: 6/7/2021 sql update save and exit current workout
-
-
-    private void deleteOldRecords(Long oldest)
+    public void deleteWorkoutRecord( int uidVal)
     {
-        // TODO: 6/9/2021 when a new record period is added we should remove old records
+        new Thread(() -> {
+        int success = workoutRecordDao.delete(uidVal);
+
+        if (success != 1)
+        {
+            FirebaseCrashlytics.getInstance().log("failed delete workout");
+            FirebaseCrashlytics.getInstance().recordException(new Exception());
+        }
+
+        }).start();
+
     }
+
+
 
     //endregion
+
 
 
     //region--------------------------backup/file building etc
@@ -878,11 +1162,28 @@ public class Controller {
     //return records between two dates
     public ArrayList<WorkoutRecord> getMatchingWorkoutRecords(long start, long end)
     {
-        return (ArrayList<WorkoutRecord>) workoutRecordDao.getSelection(start, end);
+        return (ArrayList<WorkoutRecord>) workoutRecordDao.getSelection(end, start);
     }
 
 
 
     //endregion
+
+
+    public Subscription getSubscription()
+    {
+        return subscription;
+    }
+
+    public boolean showRating()
+    {
+        //return true;
+        return  subscription.showRating();
+    }
+
+    public void ratingRecieved()
+    {
+        subscription.cancelRating();
+    }
 
 }
